整理格格式

--- a/前端/Vue/2-打包工具.md
+++ b/前端/Vue/2-打包工具.md
@@ -7,7 +7,7 @@
 ## 1 node.js
 
 1. 说明：是一个基于 Chrome V8 引擎的 JavaScript 运行环境，即运行时建立的一个平台，是运行在服务端的 JavaScript；相当于 java 体系中对应的 jdk；也可以使用 node.js 可以单独用来编写 javascript。
-2. 安装：安装的方式很多种，可以从官网获取安装包；[node.js 中文官网下载链接](http://nodejs.cn/download/)
+2. 安装：安装的方式很多种，可以从官网获取安装包；[node.js 中文官网](http://nodejs.cn/download/)
 3. 查看版本：node -v；安装之后可以通过查看版本看是否安装成功。
 
 ## 2. npm
@@ -20,7 +20,7 @@
    - 安装命令：npm install <Module Name>
    - 查看所有版本号：npm view <Module Name> versions --json
    - 全局和本地安装区别：本地安装（local）、全局安装（global）两种，从敲的命令行来看，差别只是有没有-g 而已
-   - ==如果要安装指定的版本，使用@拼接，如 npm install webpack@5.35.1 -g==
+   - 如果要安装指定的版本，使用@拼接，如 npm install webpack@5.35.1 -g
    - 卸载命令：npm uninstall <Module Name>
 
 ## 3. webpack 静态模块打包器
@@ -38,4 +38,4 @@
 3. 查看安装是否成功(版本)：vue -V 或者 vue --version
 4. 卸载：npm uninstall -g vue-cli
 
-==vue3.0 是没有 webpack 配置文件的，vue3.0 自己封装了 webpack 的配置；我们只需要在根目录创建 vue.config.js 文件，即可对 webpack 进行配置==
+vue3.0 是没有 webpack 配置文件的，vue3.0 自己封装了 webpack 的配置；我们只需要在根目录创建 vue.config.js 文件，即可对 webpack 进行配置
