搭建虚拟机，整理linux相关笔记

--- a/Linux/基础命令.md
+++ b/Linux/基础命令.md
@@ -135,6 +135,8 @@ history	       # 查看历史命令
 ctrl+r 	       # 搜索历史命令
 
 wc 统计行号    line=`wc -l $path |cut -d' ' -f1`    #
+
+setup          # ip配置
 ```
 
 ![基础](../../images/Linux/linux_login.png)
@@ -288,24 +290,17 @@ make
 make install                        # make install PREFIX=/usr/local/xxx可以替代./configure命令
 
 # 2. yum在线安装
-yum -y install xxx # yum install 安装命令 -y 所有的提示都为 y
-yum -y install gcc
-yum -y install gcc-c++
-
-ip配置:setup
-网络yum源（即网络地址池）:vi /etc/yum.repos.d/CentOS-Base.repo 打开CentOS-Base.repo文件
-
+yum -y install xxx # yum install 安装命令: -y所有的提示都为y，--installroot指定安装路径，--downloadonly只下载，不安装，list查看所有安装列表，search搜索关键字对应的包
 yum -y update 包名							 # 升级
-yum list                               # 查询所有可用软件包列表
-yum search 关键字                       # 搜索服务器上所有和关键字相关的包
-yum grouplist                          #列出所有可用的软件组列表
+yum list                                # 查询所有可用软件包列表
+yum grouplist                          # 列出所有可用的软件组列表
+/etc/yum.repos.d/CentOS-Base.repo      # yum源镜像仓库
 
 # 3. 使用rpm包安装
-wget 获取rpm包，或者自行下载并上传
+wget              # 获取rpm包，
 rpm -ivh --prefix=/usr/local/xxx 二进制软件包         # i安装 v详细信息 h显示进度  --nodeps 不检测依赖性  --prefix 安装到指定目录
-
 rpm -uvh xx.rpm 	 # 升级
-rpm -e 				 # 卸载
+rpm -e --nodeps			 # 卸载
 rpm -qa 			    # 查询所有安装的rpm
 rpm -qi -qip		 # information软件信息  p package
 rpm -ql -qlp  		 # 查询(未)文件安装位置
@@ -473,40 +468,78 @@ sudo service cron restart
 
 #### 12.2.5 软件设置自启动
 
-### 12.3 安装软件
+### 12.3.1 jdk
 
-#### 12.3.1 jdk
+OpenJDK 是 JDK 的开放源码版本，也就是在 09 年的时候 Sun 公司由于各种原因被 Oracle 收购，即将被收购时 Sun 公司将 JDK 开源于是就出现了 OpenJDK，现在 Oracle 公司发布新版的 jdk 时会发布两个版本，一个是加了一些自己 Oracle 公司的商业技术的 JDK (就类似在一个纯净的软件上加了一些自己的插件等) ，另一个是 OpenJDK（也就是一般没有加任何其他插件的纯净版的 JDK）。即便是这样 JDK 与 OpenJDK 源代码差距也微乎其微，几乎也可以认为是一模一样。
 
-```sh
-#安装jdk
-java -version			   # 查看版本
-# 检查jdk是否安装，如果有就需要卸载
-rpm -qa|grep jdk        # 查看JDK是否安装
-rpm -e --nodeps ** 		# 卸载，如果是使用解压缩安装的话，就手动卸载，使用which java查看安装路径，如果是使用yum安装，那就自己找办法。
+Linux 默认安装了 Open JDK，如果使用 JDK 时，需要先卸载 Open JDK，或者更改默认配置。
 
-rpm -ivh xx.rpm			# 安装jdk，或者使用压缩包、yum安装
-#配置环境变量！
-/etc/profile 			# 在文件的最后面增加java的配置和 window安装环境变量一样！
+```shell
+# 1. 查看JDK是否安装
+java -version			               # 查看版本，查看是否安装jdk
+rpm -qa|grep jdk                    # 如果使用rpm方式安装，使用命令卸载：rpm -e --nodeps ***
+yum list installed | grep "nginx"   # 如果是使用yum安装，那就自己找办法
+which java                          # 如果使用解压缩安装的话，使用which java查看安装路径并手动卸载
+# 2. 安装jdk（压缩包、yum、rpm），推荐路径：/usr/local/jdk
+rpm -ivh xxx.rpm
+tar -zxvf xxx.tag.gz
+# 3. 配置环境变量
+vim /etc/profile 			# 在文件的最后面增加java的配置和 window安装环境变量一样！
 source /etc/profile		# 配置文件生效
 
 #set java environment
-JAVA_HOME=/usr/local/java/jdk1.8.0_161
-JRE_HOME=$JAVA_HOME/jre
-CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar:$JRE_HOME/lib/rt.jar # .: 很重要
-PATH=$PATH:$JAVA_HOME/bin:$JRE_HOME/bin
-export JAVA_HOME JRE_HOME CLASSPATH PATH
+JAVA_HOME=/usr/local/db-soft/jdk1.8.0_311
+PATH=$JAVA_HOME/bin:$PATH
+CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar     # .: 很重要
+export JAVA_HOME PATH CLASSPATH
 ```
 
-#### 12.3.2 docker
+### 12.3.2 nginx
 
-#### 12.3.3 vsftpd 和 ftp
+安装 nginx 需要先将官网下载的源码进行编译，因此需要安装一些依赖环境：
+
+1.  gcc：编译依赖 gcc 环境
+2.  pcre：PCRE(Perl Compatible Regular Expressions) 是一个 Perl 库，包括 perl 兼容的正则表达式库，nginx 的 http 模块使用 pcre 来解析正则表达式
+3.  pcre-devel：pcre-devel 是使用 pcre 开发的一个二次开发库
+4.  zlib：zlib 库提供了很多种压缩和解压缩的方式， nginx 使用 zlib 对 http 包的内容进行 gzip、
+5.  OpenSSL：OpenSSL 是一个强大的安全套接字层密码库，囊括主要的密码算法、常用的密钥和证书封装管理功能及 SSL 协议，nginx 不仅支持 http 协议，还支持 https（即在 ssl 协议上传输 http）
+
+```shell
+# 1. 检查是否安装
+rpm -qa | grep "nginx"
+yum list installed | grep "nginx"
+# 2. 安装插件
+yum -y install gcc pcre‐devel openssl‐devel zlib‐devel
+# 3. 安装编译
+tar -zxvf /usr/local/nginx/nginx-1.18.0.tar.gz  # 解压
+cd /usr/local/nginx/nginx-1.18.0
+./configure --prefix=/usr/local/nginx  # 编译安装(默认安装在/usr/local/nginx)
+make && make install
+# 4. 启动
+/usr/local/nginx/sbin/nginx
+# 5. 浏览器访问
+# 6. 常用命令
+./nginx -t    # 测试检查配置文件语法
+./nginx       # 启动
+./nginx -s stop/quit   # 停止
+./nginx -s reload      # 重启
+ps -ef | grep nginx  # 查看进程命令
+kill -HUP pid        # 平滑重启
+
+# 7. 增加配置
+1. 在conf目录下新建目录，在目录下新建一个以.conf结尾的配置文件；
+2. 编写该配置文件
+3. 修改主配置文件nginx.conf，在http节点下添加内容：include xxx/*.conf
+```
+
+### 12.3.3 vsftpd 和 ftp
 
 1. ftp File Transfer Protocol 文件传输协议，实现不同操作系统之间文件的传输
 2. vsftpd 一个基于 ftp 协议的文件传输服务器软件，跨平台、跨操作系统的传输文件
 
-#### 12.3.4 LNMP
+### 12.3.4 LNMP
 
-#### 12.3.5 httpd apache tomcat
+### 12.3.5 httpd apache tomcat
 
 > 是 Apache 超文本传输协议（HTTP）服务器的主程序。被设计为一个独立运行的后台进程，他会建立一个处理请求的子进程或线程的池；通常，httpd 不应该被直接调用
 >
@@ -565,45 +598,8 @@ systemctl status httpd
    - Apache 是专门用了提供 HTTP 服务的，以及相关配置的（例如虚拟主机、URL 转发等等）；Tomcat 是 Apache 组织在符合 J2EE 的 JSP、Servlet 标准下开发的一个 JSP 服务器
    - apache 支持静态页，tomcat 支持动态的，比如 servlet 等。一般使用 apache+tomcat 的话，apache 只是作为一个转发，对 jsp 的处理是由 tomcat 来处理的。
    - apache 是 web 服务器，tomcat 是应用（java）服务器，它只是一个 servlet(jsp 也翻译成 servlet)容器，可以认为是 apache 的扩展，但是可以独立于 apache 运行。
-   -
 
-#### 12.3.6 nginx
-
-```sh
-# 1. 检查是否安装
-rpm -qa | grep "nginx"   /    yum list installed | grep "nginx"
-   gcc：安装 nginx 需要先将官网下载的源码进行编译，编译依赖 gcc 环境
-   pcre：PCRE(Perl Compatible Regular Expressions) 是一个Perl库，包括 perl 兼容的正则表达式库，nginx 的 http 模块使用 pcre 来解析正则表达式
-   pcre-devel：pcre-devel 是使用 pcre 开发的一个二次开发库
-   zlib：zlib 库提供了很多种压缩和解压缩的方式， nginx 使用 zlib 对 http 包的内容进行 gzip、
-   OpenSSL：OpenSSL 是一个强大的安全套接字层密码库，囊括主要的密码算法、常用的密钥和证书封装管理功能及 SSL 协议，nginx 不仅支持 http 协议，还支持 https（即在ssl协议上传输http）
-# 2. 先安装插件
-yum -y install gcc pcre‐devel openssl‐devel zlib‐devel
-# 3. 安装编译
-tar -zxvf /usr/local/nginx/nginx-1.18.0.tar.gz
-cd /usr/local/nginx/nginx-1.18.0
-./configure --prefix=/usr/local/nginx  # 编译安装(默认安装在/usr/local/nginx)
-make
-make install
-# 4. 启动
-/usr/local/nginx/sbin/nginx
-# 5. 浏览器访问
-
-# 6. 常用命令
-./nginx -t    # 测试检查配置文件语法
-./nginx       # 启动
-./nginx -s stop/quit   # 停止
-./nginx -s reload      # 重启
-ps -ef | grep nginx  # 查看进程命令
-kill -HUP pid        # 平滑重启
-
-# 7. 增加配置
-1. 在conf目录下新建目录，在目录下新建一个以.conf结尾的配置文件；
-2. 编写该配置文件
-3. 修改主配置文件nginx.conf，在http节点下添加内容：include xxx/*.conf
-```
-
-#### 12.4 调整 home 分区，扩大 root 分区
+### 12.4 调整 home 分区，扩大 root 分区
 
 > 把/home 内容备份，然后将/home 文件系统所在的逻辑卷删除，扩大/root 文件系统，新建/home ，恢复/home 内容
 > 将/home 文件夹备份，删除/home 文件系统所在的逻辑卷，增大/文件系统所在的逻辑卷，增大/文件系统大小，最后新建/home 目录，并恢复/home 文件夹下的内容
