搭建虚拟机，整理linux相关笔记

--- a/Linux/基础命令.md
+++ b/Linux/基础命令.md
@@ -139,7 +139,7 @@ wc 统计行号    line=`wc -l $path |cut -d' ' -f1`    #
 setup          # ip配置
 ```
 
-![基础](../../images/Linux/linux_login.png)
+![基础](../images/Linux/linux_login.png)
 
 ## 3. 常用配置文件，文件修改后需要 source 命令重新加载或退出重新登录
 
@@ -353,7 +353,7 @@ firewall-cmd --list-ports # 只看端口信息
 
 ## 10. cpu 和内存使用率
 
-![top命令详解](../../images/Linux/linux_cpu.png)
+![top命令详解](../images/Linux/linux_cpu.png)
 
 ```sh
 top               # P占用最大   -d 5  每5s刷新一次
