--- a/Linux/基础命令.md
+++ b/Linux/基础命令.md
@@ -290,11 +290,14 @@ make
 make install                        # make install PREFIX=/usr/local/xxx可以替代./configure命令
 
 # 2. yum在线安装
-yum -y install xxx # yum install 安装命令: -y所有的提示都为y，--installroot指定安装路径，--downloadonly只下载，不安装，list查看所有安装列表，search搜索关键字对应的包
+yum -y install xxx # yum install 安装命令: -y所有的提示都为y，--installroot指定安装路径，--downloadonly只下载，不安装，默认下载路径：/var/cache/yum/x86_64/7/base/packages/，list查看所有安装列表，search搜索关键字对应的包
 yum -y update 包名							 # 升级
 yum list                                # 查询所有可用软件包列表
 yum grouplist                          # 列出所有可用的软件组列表
 /etc/yum.repos.d/CentOS-Base.repo      # yum源镜像仓库
+yum clean all     # 清理缓存
+yum makecache     # 重新生成yum缓存文件
+yum uodate        # 升级更新包
 
 # 3. 使用rpm包安装
 wget              # 获取rpm包，
@@ -478,7 +481,7 @@ Linux 默认安装了 Open JDK，如果使用 JDK 时，需要先卸载 Open JDK
 # 1. 查看JDK是否安装
 java -version			               # 查看版本，查看是否安装jdk
 rpm -qa|grep jdk                    # 如果使用rpm方式安装，使用命令卸载：rpm -e --nodeps ***
-yum list installed | grep "nginx"   # 如果是使用yum安装，那就自己找办法
+yum list installed | grep "nginx"   # 如果是使用yum安装，使用命令卸载：yum -y remove ***
 which java                          # 如果使用解压缩安装的话，使用which java查看安装路径并手动卸载
 # 2. 安装jdk（压缩包、yum、rpm），推荐路径：/usr/local/jdk
 rpm -ivh xxx.rpm
