--- a/设计模式/行为型.md
+++ b/设计模式/行为型.md
@@ -1,1 +1,5 @@
-## ...
+## 3. 单例模式
+
+保证一个类仅有一个实例，并提供一个访问它的全局访问点。  
+Spring 中的单例模式完成了后半句话，即提供了全局的访问点 BeanFactory。但没有从构造器级别去控制单例，这是因为 Spring 管理的是是任意的 Java 对象。Spring 下默认的 Bean 均为单例。  
+常用单例模式写法：饿汉式、懒汉式、注册式、序列化。
