--- a/设计模式/创建型.md
+++ b/设计模式/创建型.md
@@ -13,3 +13,26 @@ Spring 中的 BeanFactory 就是简单工厂模式的体现，根据传入一个
 保证一个类仅有一个实例，并提供一个访问它的全局访问点。  
 Spring 中的单例模式完成了后半句话，即提供了全局的访问点 BeanFactory。但没有从构造器级别去控制单例，这是因为 Spring 管理的是是任意的 Java 对象。Spring 下默认的 Bean 均为单例。  
 常用单例模式写法：饿汉式、懒汉式、注册式、序列化。
+
+## 4. 建造者模式
+
+隐藏创建对象的建造过程和细节，使得用户再不知对象的建造过程和细节的情况下，可直接创建复杂的对象。降低复杂度，隔离构建过程，提供代码复用性和封装性。
+
+用户只需要给出指定复杂对象的类型和内容，建造者模式负责按顺序创建复杂对象（把内部的建造过程和细节隐藏起来)
+
+实现方法
+
+1. 通过 Client、Director、Builder、ConcreteBuilder、Pruduct 形成的建造者模式
+
+   - Builder，抽象建造者，一般用来定义建造细节的方法，并不设计具体的对象部件的创建；
+   - ConcreteBuilder，具体建造者，实现抽象建造者公共接口；
+   - Director，指挥者，调用具体建造者来创建复杂对象的各个部分，并按照一定顺序流程来建造复杂对象，是直接和 Client 进行需求沟通；
+   - Product，产品（复杂对象）
+   - Client
+
+   - 沟通后指挥者将客户创建产品的需求划分为各个部件的建造请求（Builder）；
+   - 将各个部件的建造请求委派到具体的建造者（ConcreteBuilder）；
+   - 各个具体建造者负责进行产品部件的构建；
+   - 最终构建成具体产品（Product）。
+
+2. 通过静态内部类方式实现零件无序装配化构造
