工作中的总结

--- a/前端开发/Vue/2-打包工具.md
+++ b/前端开发/Vue/2-打包工具.md
@@ -15,8 +15,9 @@
 1. 说明：包管理工具，相当于 maven 中的包依赖管理，解决包依赖问题，可以从 npm 服务器下载别人的包使用，也可以将自己的包上传到 npm 服务器供别人使用；
 2. 安装：无需手动安装，node.js 中已经集成了 npm；
 3. 查看版本：npm -v
-4. 升级更新：npm install npm -g，如果版本不兼容，需要升级版本
-5. 使用 npm 命令安装模块
+4. 更改默认安装位置，npm config set prefix "D:\Program Files\nodejs\npm\npm"，npm config set cache "D:\Program Files\nodejs\npm\npm-cache"
+5. 升级更新：npm install npm -g，如果版本不兼容，需要升级版本
+6. 使用 npm 命令安装模块
    - 安装命令：npm install <Module Name>
    - 查看所有版本号：npm view <Module Name> versions --json
    - 全局和本地安装区别：本地安装（local）、全局安装（global）两种，从敲的命令行来看，差别只是有没有-g 而已
