--- a/运维部署/常用软件工具指导手册.md
+++ b/运维部署/常用软件工具指导手册.md
@@ -6,20 +6,42 @@
 2. Alibaba Java Coding Guidelines（编码规范检查）
 3. Json Viewer
 4. Eclipse Code Formatter（统一代码格式化，需要加载配置文件）
+5. Resource Bundle Editor（国际化文件编写）
+6. EnvFile（环境文件配置）
 
 ### 1.2 更改配置
 
 1. 修改字体背景为护眼模式（C7EDCC），字体大小和样式为 JetBrains Mono(14)、Consolas(15)
 2. 快捷键智能提示改为 Alt + /
-3. 类注释模板配置：Editor -> File and Code Templates
+3. 类注释模板配置：Editor -> File and Code Templates -> includes
 4. 消除类注释警告：Wrong tag 'Date' ，需要配置：Editor -> Inspections -> java -> javadoc -> Javadoc declaration problems -> Options
-5. Xms 为 IDEA 初时的内存大小，提高 Java 程序的启动速度。
-6. Xmx 为 IDEA 最大内存数，提高该值，可以减少内存 Garage 收集的频率，提高程序性能。
-7. -XX:ReservedCodeCacheSize=512m 保留代码占用的内存容量。
+5. -Xms 初始内存大小，提高 Java 程序的启动速度，通常为操作系统可用内存的 1/64 大小。
+6. -Xmx 程序运行期间最大可占用的内存大小，是堆的最大内存，提高该值，可以减少内存 Garage 收集的频率，提高程序性能，如果设置过小，可能抛出 OutOfMemory 异常，通常为操作系统可用内存的 1/4 大小。
+7. -Xss 每个线程的堆栈大小，默认 JDK1.4 中是 256K，JDK1.5+中是 1M
 
 ## 2. Visual Studio Code
 
-### 2.1 常用快捷键
+### 2.1 常用插件
+
+1. Chinese (Simplified) (简体中文)
+2. vscode-icons （左侧显示图标）、material icon Theme （主题插件）
+3.
+
+- eslint/ESLint Chinese Rules 代码格式化
+- vetur 集 vue.js 代码提示，语法高亮等功能为一体的流行插件
+- prettier-Code formatter 代码格式化
+- guides 显示代码对齐辅助线
+- HTMLHint 显示 html 错误
+- import Cost 该插件会在行尾显示导入包的大小
+- path intellisense 识别引入文件路径，提供路径提示功能
+
+- carbon-now-sh 将选择代码生成图片，操作：选中图片，ctrl+shift+P，输入 carbon。
+- Turbo console log 打印日志，快捷键：ctrl+alt+l
+- Markdown Preview Enhanced
+- live server 开启服务，地址路径变了
+- auto rename tag 修改 html 标签，前后同步
+
+### 2.2 常用快捷键
 
 - ctrl+shift+P 万能搜索
 - alt+上下键 上下移
@@ -27,24 +49,6 @@
 - shift+ctrl+k 删除一行
 - ctrl+enter 下边插入一行
 - ctrl+shift+\ 跳转到匹配的括号
-
-### 2.2 常用插件
-
-- Chinese (Simplified) (简体中文)
-- eslint 代码格式化
-- vetur 集 vue.js 代码提示，语法高亮等功能为一体的流行插件
-- prettier-Code formatter 代码格式化
-- guides 显示代码对齐辅助线
-- HTMLHint 显示 html 错误
-- vscode-icons 左侧显示图标
-- import Cost 该插件会在行尾显示导入包的大小
-- path intellisense 识别引入文件路径，提供路径提示功能
-- material icon Theme 主题插件
-- carbon-now-sh 将选择代码生成图片，操作：选中图片，ctrl+shift+P，输入 carbon。
-- Turbo console log 打印日志，快捷键：ctrl+alt+l
-- Markdown Preview Enhanced
-- live server 开启服务，地址路径变了
-- auto rename tag 修改 html 标签，前后同步
 
 ### 2.3 常见问题
 
