--- a/运维部署/常用软件工具指导手册.md
+++ b/运维部署/常用软件工具指导手册.md
@@ -25,21 +25,19 @@
 
 1. Chinese (Simplified) (简体中文)
 2. vscode-icons （左侧显示图标）、material icon Theme （主题插件）
-3.
+3. auto rename tag 修改 html/xml 标签，前后同步
+4. path intellisense 识别引入文件路径，提供路径提示功能
+5. carbon-now-sh 将选择代码生成图片，操作：选中代码，ctrl+shift+P，输入 carbon
+6. vetur 集 vue.js 代码提示，语法高亮等功能为一体的流行插件
+7. eslint/ESLint Chinese Rules 代码格式化
+8. prettier-Code formatter 代码格式化
 
-- eslint/ESLint Chinese Rules 代码格式化
-- vetur 集 vue.js 代码提示，语法高亮等功能为一体的流行插件
-- prettier-Code formatter 代码格式化
 - guides 显示代码对齐辅助线
 - HTMLHint 显示 html 错误
 - import Cost 该插件会在行尾显示导入包的大小
-- path intellisense 识别引入文件路径，提供路径提示功能
-
-- carbon-now-sh 将选择代码生成图片，操作：选中图片，ctrl+shift+P，输入 carbon。
 - Turbo console log 打印日志，快捷键：ctrl+alt+l
 - Markdown Preview Enhanced
 - live server 开启服务，地址路径变了
-- auto rename tag 修改 html 标签，前后同步
 
 ### 2.2 常用快捷键
 
