重新梳理，重新提交，准备学习

--- a/Java/基础功能解决方案.md
+++ b/Java/基础功能解决方案.md
@@ -151,3 +151,18 @@ IOUtils.toByteArray((InputStream) null);
 - getString 从 Map 中获取 String, 其重载方法有三个参数, 表示如果转换失败则使用默认值
 - getMap 获取 Map 类型的值
 - putAll 将二维数组放入 Map 中
+
+
+## MapStruct
+
+是一个Java注解处理器，用于在Java Bean之间执行对象映射。它可简化在不同类型的对象之间进行转换的过程，避免了手动编写大量的映射代码。
+
+mapstruct-processor，是用来处理和生成映射代码的注解处理器。需要在项目的构建配置中添加MapStruct-Processor作为依赖，以便在编译过程中触发注解处理器的执行。
+
+MapStruct-JDK8，它提供了对Java 8特性的支持。具体来说，MapStruct-JDK8允许您在映射过程中使用Java 8的新特性，如Java 8的日期时间API（例如LocalDate、LocalDateTime）和函数式接口（例如函数式映射、条件映射等）。
+
+另外，提到的"mapstruct"是指整个MapStruct框架，包括核心库和可选的扩展模块，如MapStruct-JDK8。
+
+而"mapstruct-processor"则是MapStruct核心库所依赖的注解处理器，它负责处理注解，并在编译时生成映射代码。开发者在使用MapStruct时，需要将mapstruct-processor作为依赖添加到项目中，并配置编译器以触发注解处理器的执行。
+
+综上所述，MapStruct-JDK8是MapStruct框架的一个模块，提供了对Java 8特性的支持；而"mapstruct-processor"是MapStruct核心库所依赖的注解处理器，用于在编译时生成映射代码。
