系统学习 Maven，对基础知识加以巩固，对插件部分进行系统整理

--- a/Java/1.开发基础必备/常用基础知识.md
+++ b/Java/1.开发基础必备/常用基础知识.md
@@ -1,3 +1,5 @@
+# 概念篇
+
 ## 1. 接口与抽象类
 
 **设计理念不同**
@@ -34,6 +36,11 @@
 2. 接口可以省略 abstract 关键字，抽象类不能；
 3. 虽然接口和抽象类都不能被实例化，但是抽象类可以有构造器，接口没有构造器；
 4. 抽象类中成员变量默认 default，可在子类中被重新定义，也可被重新赋值；抽象方法被 abstract 修饰，不能被 private、static、synchronized 和 native 等修饰，必须以分号结尾，不带花括号。
+
+**如何决定该用抽象类还是接口？**
+
+- 如果我们要表示一种is-a的关系，并且是为了解决代码复用的问题，我们就用抽象类；
+- 如果我们要表示一种has-a关系，并且是为了解决抽象而非代码复用的问题，那我们就可以使用接口。
 
 ## 2. Java 中只有值传递
 
