--- a/设计模式/结构型.md
+++ b/设计模式/结构型.md
@@ -3,3 +3,47 @@
 保证一个类仅有一个实例，并提供一个访问它的全局访问点。  
 Spring 中的单例模式完成了后半句话，即提供了全局的访问点 BeanFactory。但没有从构造器级别去控制单例，这是因为 Spring 管理的是是任意的 Java 对象。Spring 下默认的 Bean 均为单例。  
 常用单例模式写法：饿汉式、懒汉式、注册式、序列化。
+
+
+## 4. 门面模式
+
+当一个系统的功能越来越强，子系统会越来越多，客户对系统的访问也变得越来越复杂。这时如果系统内部发生改变，客户端也要跟着改变，这违背了“[开闭原则](https://so.csdn.net/so/search?q=开闭原则&spm=1001.2101.3001.7020)”，也违背了“迪米特法则”，所以有必要为多个子系统提供一个统一的接口，从而降低系统的耦合度，这就是外观模式的目标。
+
+### 4.1 外观模式的定义与特点
+
+外观（Facade）模式的定义：是一种通过为多个复杂的子系统提供一个一致的接口，而使这些子系统更加容易被访问的模式。该模式对外有一个统一接口，外部应用程序不用关心内部子系统的具体的细节，这样会大大降低应用程序的复杂度，提高了程序的可维护性。
+
+外观（Facade）模式是“[迪米特法则](https://so.csdn.net/so/search?q=迪米特法则&spm=1001.2101.3001.7020)”的典型应用，它有以下主要优点。
+
+1. 降低了子系统与客户端之间的耦合度，使得子系统的变化不会影响调用它的客户类。
+2. 对客户屏蔽了子系统组件，减少了客户处理的对象数目，并使得子系统使用起来更加容易。
+3. 降低了大型软件系统中的编译依赖性，简化了系统在不同平台之间的移植过程，因为编译一个子系统不会影响其他的子系统，也不会影响外观对象。
+
+外观（Facade）模式的主要缺点如下。
+
+1. 不能很好地限制客户使用子系统类。
+2. 增加新的子系统可能需要修改外观类或客户端的源代码，违背了“开闭原则”。
+
+### 4.2 外观模式的结构与实现
+
+外观（Facade）模式的结构比较简单，主要是定义了一个高层接口。它包含了对各个子系统的引用，客户端可以通过它访问各个子系统的功能。现在来分析其基本结构和实现方法。
+
+
+### 4.3 模式的结构
+
+外观（Facade）模式包含以下主要角色。
+
+1. 外观（Facade）角色：为多个子系统对外提供一个共同的接口。
+2. 子系统（Sub System）角色：实现系统的部分功能，客户可以通过外观角色访问它。
+3. 客户（Client）角色：通过一个外观角色访问各个子系统的功能。
+
+### 4.4 外观模式的应用场景
+
+通常在以下情况下可以考虑使用外观模式。
+
+1. 子系统越来越复杂，增加外观模式提供简单接口调用
+2. 构建多层系统结构，利用外观对象作为每层的入口，简化层间调用（对分层结构系统构建时，使用外观模式定义子系统中每层的入口点可以简化子系统之间的依赖关系）
+
+### 4.5 外观模式的扩展
+
+在外观模式中，当增加或移除子系统时需要修改外观类，这违背了“开闭原则”。如果引入抽象外观类，则在一定程度上解决了该问题
