整理目录结构

--- a/05-Java/9.架构之路/初识架构.md
+++ b/05-Java/9.架构之路/初识架构.md
@@ -2,6 +2,15 @@
 
 ## 5. 画图
 
+
+> E-R 图的工具：
+>  
+> 1. 微软 visio
+> 2. processon（网页版本，免费版可以使用9张图。）
+> 3. 亿图
+> 4. xmind 思维导图
+> 5. draw.io
+
 ### 5.1 流程图
 
 常见的流程图形状及其使用说明：
